apps/platform/platform-test/rabbitmq/templates/common.yaml
---
# Source: rabbitmq/templates/common.yaml
---
# Source: rabbitmq/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/service: rabbitmq
    app.kubernetes.io/version: "3.13"
    helm.sh/chart: rabbitmq-0.1.0
  namespace: platform-test
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: amqp
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: management
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
---
# Source: rabbitmq/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: "3.13"
    helm.sh/chart: rabbitmq-0.1.0
  namespace: platform-test
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/instance: rabbitmq
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: rabbitmq
        app.kubernetes.io/name: rabbitmq
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      imagePullSecrets: 
        - name: cr-spydersoft-github
      containers: 
        - envFrom:
          - secretRef:
              name: rabbitmq-secrets
          image: rabbitmq:3-management
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: 5672
            timeoutSeconds: 5
          name: main
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 5672
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: 5672
            timeoutSeconds: 5
          volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: rabbitmq-data
          - mountPath: /rabbitmq-secrets
            name: rabbitmq-secrets
      volumes: 
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq
        - name: rabbitmq-secrets
          secret:
            secretName: rabbitmq-secrets
---
# Source: rabbitmq/templates/common.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: "3.13"
    helm.sh/chart: rabbitmq-0.1.0
  namespace: platform-test
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
  hostnames:
    - "rabbitmq.mattgerega.net"
  rules:
    -
      backendRefs:
            
      - group: ""
        kind: Service
        name: rabbitmq
        namespace: platform-test
        port: 15672
        weight: 1
