apps/platform/platform-test/rabbitmq/templates/rabbitmq-security-policy.yaml
---
# Source: rabbitmq/templates/rabbitmq-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: rabbitmq-auth
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: rabbitmq
  oidc:
    provider:
      issuer: https://auth.mattgerega.com
    clientID: platform-tools
    clientSecret:
      name: rabbitmq-oidc-secret
    scopes:
      - openid
      - profile
      - roles
    redirectURL: "https://rabbitmq.mattgerega.net/oauth2/callback"
